--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,10 @@
+/* Site Color Scheme
+MDT Blue #017abb #08c darkcyan hsl(200,98,36) rgb(1,122,187) 
+MDT Green #4f8636 #583 darkolivegreen hsl(101,42,36) rgb(79,134,54)
+MDT Orange #ff8a00 #f90 darkorange hsl(32,100,50) rgb(255,138,0)
+White
+Dark Grey
+*/
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
 }
