--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,7 +1,22 @@
 .hero-container {
   /* position: relative; */
-  padding-top: 10vh;
-  height: 50vh;
-  color: #017abb;
-  background-color: #1d1d22;
+  padding-top: 10rem;
+  padding: 0 20%;
+  height: 75vh;
+  color: #ff8a00;
+  background-image: url(/images/brickellSouthboundTrain1.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0px 0px;
+  /* background-color: #1d1d22; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.hero-text-area {
+  background-color: rgba(42, 42, 42, 0.6);
+}
+.hero-text {
 }
