--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,19 +1,19 @@
-/* .hero-container {
-  position: relative;
+.hero-container {
+  background-image: url(/img/brickellSouthboundTrain1.png);
+
   padding-top: 10rem;
   padding: 0 20%;
   height: 75vh;
   color: #ff8a00;
-  background-image: url(/photos/brickellSouthboundTrain1.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 0px 0px;
-background-color: #1d1d22;
+
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-} */
+}
 
 .hero-text-area {
   background-color: rgba(42, 42, 42, 0.6);
