--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -1,3 +1,20 @@
+@media (min-width: 375px) {
+  .nav-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-height: 15px;
+    margin: 0;
+    z-index: 100;
+  }
+
+  .nav-title {
+    display: none;
+  }
+  .nav-right {
+    display: none;
+  }
+}
 .nav-container {
   /* Positioning */
   padding: 1.5rem;
@@ -6,8 +23,11 @@
   width: 100vw;
 
   /* Other Styling */
-  background: linear-gradient(#4f8636, #115f16);
+  background: linear-gradient(#555e6d, #313332);
   overflow: hidden;
+
+  /* box-shadow: 0px 2px 5px #24a368; */
+  /* border-bottom: 0.5rem solid #017abb; */
 }
 
 .nav-content {
@@ -26,21 +46,35 @@
   width: 20rem;
 }
 .nav-icon {
-  height: 150px;
-  padding-top: 30px;
+  height: 100px;
+  padding-top: 20px;
   display: inline;
-  /* align-self: center; */
 }
 
 .nav-right {
   display: flex;
   align-self: center;
   justify-items: space-between;
-
-  /* width: 30%; */
 }
 
 .nav-button {
   margin: 0 0.5rem;
   height: 100%;
+}
+
+@media (max-width: 375px) {
+  .nav-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 3.5vh;
+    margin: 0;
+  }
+
+  .nav-title {
+    display: none;
+  }
+  .nav-right {
+    display: none;
+  }
 }
