--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -7,9 +7,11 @@
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 6vh;
+    padding-top: 5vh;
     background-position: -30rem 5rem;
     position: relative;
+    z-index: -100;
+    height: 100vh;
     /* box-shadow: ; */
   }
   .hero-background-img {
