--- a/src/Components/Station/Station.css
+++ b/src/Components/Station/Station.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   padding: 10px;
-  margin: 10px;
+  /* margin: 10px; */
   width: 100vw;
 
   justify-content: center;
@@ -10,24 +10,24 @@
 .north-bound-container {
   display: flex;
   padding: 10px;
-  margin: 10px;
+  margin: 0 10px;
   align-content: center;
   flex-direction: column;
-  width: 35%;
+  width: 45%;
 }
 .south-bound-container {
   display: flex;
   padding: 10px;
-  margin: 10px;
+  margin: 0 10px;
   flex-direction: column;
-  width: 35%;
+  width: 45%;
 }
 .trains-container {
   display: flex;
-  padding: 10px;
-  margin: 10px;
+  /* padding: 0px 200px; */
+  /* margin: 10px; */
   align-content: center;
-  justify-items: center;
+  justify-content: center;
 }
 .train {
   padding: 10px;
