--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -7,7 +7,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 5vh;
+    /* padding-top: 5vh; */
     background-position: -30rem 5rem;
     position: relative;
     z-index: -100;
