--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -36,6 +36,7 @@
 #page-wrap {
   text-align: center;
 
+  padding-top: 35px;
   /* Prevent sidebar from showing a scrollbar on page */
   overflow-x: auto;
 }
