feat: Updated form input options.

--- a/src/Components/Ride/Ride.css
+++ b/src/Components/Ride/Ride.css
@@ -1,5 +1,6 @@
 .ride-page-content {
-  padding-top: 6.5rem;
+  padding-top: 18pt;
   /* height: 100vh; */
   z-index: -50;
+  overflow: visible;
 }
