--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,36 +1,43 @@
-@media (min-width: 375px) {
+@media (min-width: 320px) {
   .nav-container {
     /* Positioning */
-    padding: 0.5rem;
+    /* padding: 0.5rem 5rem; */
     position: fixed;
 
+    height: 40px;
     width: 100vw;
 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     /* Other Styling */
     background: linear-gradient(#555e6d, #313332);
     overflow: hidden;
   }
-  .nav-content {
+  /* .nav-content {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-height: 10px;
-    margin: 0;
+    max-height: 30px;
+    margin: 0 2rem;
     z-index: 100;
+  } */
+
+  .navLink {
+    /* margin: 0 1rem; */
+    font-size: 1rem;
+    padding: 0 2rem;
+    color: #42be08;
   }
-}
 
-.nav-content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 3vh;
-  margin: 0 3rem;
-}
-
-.nav-title {
-  align-self: center;
-  width: 20rem;
+  .navLink > a {
+    color: inherit;
+    text-decoration: none;
+  }
+  .navIcon {
+    /* align-self: flex-start; */
+  }
 }
 
 #page-wrap {
@@ -42,68 +49,68 @@
 }
 
 /* Individual item */
-.bm-item {
-  display: inline-block;
+/* .bm-item {
+  display: inline-block; */
 
-  /* Our sidebar item styling */
-  text-decoration: none;
+/* Our sidebar item styling */
+/* text-decoration: none;
   margin-bottom: 10px;
   color: #d1d1d1;
   transition: color 0.2s;
-}
+} */
 
 /* Change color on hover */
-.bm-item:hover {
+/* .bm-item:hover {
   color: white;
-}
+} */
 
 /* The rest copied directly from react-burger-menu docs */
 
 /* Position and sizing of burger button */
-.bm-burger-button {
+/* .bm-burger-button {
   position: fixed;
   width: 36px;
   height: 30px;
   right: 36px;
-  top: 12px;
-  /* z-index: 1000; */
-}
+  top: 12px; */
+/* z-index: 1000; */
+/* } */
 
 /* Color/shape of burger icon bars */
-.bm-burger-bars {
+/* .bm-burger-bars {
   background: #42be08;
-}
+} */
 
 /* Position and sizing of clickable cross button */
-.bm-cross-button {
+/* .bm-cross-button {
   height: 24px;
   width: 24px;
-}
+} */
 
 /* Color/shape of close button cross */
-.bm-cross {
+/* .bm-cross {
   background: #bdc3c7;
-}
+} */
 
 /* General sidebar styles */
-.bm-menu {
+/* .bm-menu {
   background: #373a47;
   padding: 2.5em 1.5em 0;
-  font-size: 1.15em;
-  /* z-index: 1000; */
-}
+  font-size: 1.15em; */
+/* z-index: 1000; */
+/* } */
 
 /* Morph shape necessary with bubble or elastic */
-.bm-morph-shape {
+/* .bm-morph-shape {
   fill: #373a47;
-}
+} */
 
 /* Wrapper for item list */
-.bm-item-list {
+/* .bm-item-list {
   color: #b8b7ad;
-}
+} */
 
 /* Styling of overlay */
-.bm-overlay {
+/* .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
-}
+} */
